using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerController : MonoBehaviour
{
    public float moveSpeed;            // how fast the character moves
    public float jumpHeight;           // how high the character jumps
    private bool isFacingRight;     // check if player is facing right
    public KeyCode Spacebar;        // jump button
    public KeyCode L;                  // left movement button
    public KeyCode R;                  // right movement button
    public Transform groundCheck;      // an invisible point in space. We use it to see if the player is touching the ground
    public float groundCheckRadius;    // value to determine how big the circle around the player's feet is
    public LayerMask whatIsGround;     // this variable stores what is considered a ground to the character
    private bool grounded;             // check if the character is standing on solid ground
    private Animator anim; 
    // Use this for initialization
    void Start()
    {
     anim = GetComponent<Animator>();
    }

    // Update is called once per frame
    void Update()
    {
        if (Input.GetKeyDown(KeyCode.Space) && grounded) // when user presses the space button once
        {
            Jump(); // see function definition below
        }

        if (Input.GetKey(L)) // when user presses the left arrow button
        {
            GetComponent<Rigidbody2D>().velocity = new Vector2(-moveSpeed, GetComponent<Rigidbody2D>().velocity.y);
            // player character moves horizontally to the left along the x-axis without disrupting jump

            if (GetComponent<SpriteRenderer>() != null)
            {
                GetComponent<SpriteRenderer>().flipX = true;
            }
        }

        if (Input.GetKey(R)) // when user presses the right arrow button
        {
            GetComponent<Rigidbody2D>().velocity = new Vector2(moveSpeed, GetComponent<Rigidbody2D>().velocity.y);
            // player character moves horizontally to the right along the x-axis without disrupting jump

            if (GetComponent<SpriteRenderer>() != null)
            {
                GetComponent<SpriteRenderer>().flipX = false;
            }
        }
        anim.SetFloat("Height", GetComponent<Rigidbody2D>().velocity.y);
        anim.SetFloat("Speed",Mathf.Abs(GetComponent<Rigidbody2D>().velocity.x));
        anim.SetBool("Grounded", grounded); 

    }

    void FixedUpdate()
    {
        grounded = Physics2D.OverlapCircle(groundCheck.position, groundCheckRadius, whatIsGround);
        // this statement calculates when exactly the character is considered by Unityâ€™s engine to be standing on the ground
    }

    void Jump()
    {
        GetComponent<Rigidbody2D>().velocity = new Vector2(GetComponent<Rigidbody2D>().velocity.x, jumpHeight);
        // player character jumps vertically along the y-axis without disrupting horizontal walk
    }
}
